manifests/kustomize/overlays/kind/postgres_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  postgres
spec:
  template:
    spec:
      volumes:
      - name: pgdata
        emptyDir:
        persistentVolumeClaim:
          claimName: iceci-postgres-pvc
