manifests/kustomize/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iceci
spec:
  rules:
  - host: iceci.local
    http:
      paths:
      - path: /
        backend:
          serviceName: iceci-ui
          servicePort: 80
